# uvc-robot

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md
launch/: uvcrobot.launch
uvcrobot_hardware/: package.xml
uvcrobot_hardware/launch/: uvcrobot.launch
uvcrobot_hardware/monitoring/: PublishCPUTemp.py  publish_cpu.py
uvcrobot_hardware/pwm_motor/lib/ros_lib/: ArduinoHardware.h
uvcrobot_hardware/pwm_motor/src/: ctrl_bno055.cpp  main.cpp
uvcrobot_hardware/sensors/: imu_bno055.py
uvcrobot_motors/: .gitignore  CMakeLists.txt  package.xml
uvcrobot_motors/src/pwm_motor/include/: control.h
uvcrobot_motors/src/pwm_motor/src/: main.cpp
uvcrobot_teleop/: CMakeLists.txt  setup.py
uvcrobot_teleop/nodes/: uvcrobot_teleop_key
uvrobot/script/: PublishCPUTemp.py
uvrobot/src/pid_motors/ardpid.ino/: ardpid.ino.ino
uvrobot/src/pwm_motor/src/: main.cpp
uvrobot_motors/: CMakeLists.txt  package.xml
uvrobot_teleop/: CHANGELOG.rst  package.xml
uvrobot_teleop/nodes/: uvcrobot_teleop_key
