<?xml version="1.0"?>
<package format="2">
  <name>uvcrobot_teleop</name>
  <version>1.2.1</version>
  <description>
    Provides teleoperation using keyboard for uvcrobot.
  </description>
  <license>BSD</license>
  <author>Melonee Wise</author>
  <author email="jefersonjl82@gmail.com">Jeferson Lima</author>
  <maintainer email="jefersonjl82@gmail.com">Jeferson Lima</maintainer>
  <url type="repository">https://gitlab.com/jeferson.lima/uvc_robot</url>
  <url type="bugtracker">https://gitlab.com/jeferson.lima/uvc_robot/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
</package>
